--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
-@import "tailwindcss";
-@plugin "daisyui" {
-  themes: ["light"];
-}
-
+ @import "tailwindcss";
+ @plugin "daisyui" {
+  themes: light --default;
+ }
 
